<resources>
    <string name="app_name">FredWong_COMP304_001_Hands-On_Test1_S24</string>
    <string name="text_main_title">Brain Challenge</string>
    <string name="text_main_subtitle">Challenge your brain with scientifically designed exercises!</string>
    <string name="text_button_main">Select Exercises</string>
    <string name="content_description_imageButton_main">Clickable image to proceed to exercise selection screen</string>
    <string name="actionBar_main_title_truncated">Hands-On Test 1 COMP-304 401</string>
    <string name="actionBar_second_title_truncated">Brain Challenge</string>
    <string name="text_exercise_1">Lose things</string>
    <string name="text_exercise_2">Remember names</string>
    <string name="text_exercise_3">Learn things quickly</string>
    <string name="text_exercise_4">Keep track of multiple things</string>
    <string name="text_button_exercise">Next</string>
    <string name="text_no_exercises_selected">No exercises were selected!</string>
    <string name="text_content_description_zigzag_image">Image of a zigzag line</string>
    <string-array name="y_coordinates">
        <item>150</item>
        <item>100</item>
        <item>150</item>
        <item>100</item>
        <item>150</item>
        <item>100</item>
        <item>150</item>
        <item>100</item>
        <item>150</item>
    </string-array>
</resources>