<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".WongActivity">

    <ImageView
        android:id="@+id/imageViewZigZagLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/forest_green"
        android:contentDescription="@string/text_content_description_zigzag_image"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayoutCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/buttonDisplayExercises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewZigZagLine">

        <!-- Second Activity; since my name, Fred starts with a letter from A-N inclusive, use checkboxes -->

        <CheckBox
            android:id="@+id/checkBoxExercise1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_exercise_1" />

        <CheckBox
            android:id="@+id/checkBoxExercise2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_exercise_2" />

        <CheckBox
            android:id="@+id/checkBoxExercise3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_exercise_3" />

        <CheckBox
            android:id="@+id/checkBoxExercise4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_exercise_4" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonDisplayExercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/text_button_exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCheckBox" />

</androidx.constraintlayout.widget.ConstraintLayout>